--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "postinstall": "next build"
     "lint": "next lint"
   },
   "dependencies": {
